<resources>
    <string name="app_name">Medicine Tracking</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="title_activity_edit">Add medicine</string>

    <string name="title_share_intent">Medicine tracking share image using</string>

    <string name="pref_show_false">No</string>
    <string name="pref_show_true">Yes</string>
    <string name="pref_show_list_grid_key">show_grid</string>
    <string name="pref_show_list_grid_label">List</string>
    <string name="pref_show_list_grid_summary">Show grid</string>
    <string name="pref_backup_sync_key">backup_sync</string>
    <string name="pref_backup_sync_label">Backup &amp; sync</string>
    <string name="pref_backup_remote_key">backup_remote</string>
    <string name="pref_backup_remote_label">Backup position</string>
    <string name="pref_backup_remote_summary">Remote</string>
    <string name="pref_backup_start_key">backup_when</string>
    <string name="pref_backup_start_summary">While changing only</string>
    <string name="pref_backup_start_label">When to backup</string>
    <string name="pref_backup_account_key">backup_account</string>
    <string name="pref_backup_account_label">Backup account</string>

    <string name="pref_button_export_text">Export data</string>
    <string name="pref_button_import_text">Import_data</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_edit">Edit</string>

    <string name="edit_text_title">Title</string>
    <string name="edit_hint_title">Input title</string>
    <string name="edit_text_expire_data">Expire date</string>
    <string name="edit_text_quantity">Quantity</string>
    <string name="edit_hint_quantity">Input quantity</string>
    <string name="edit_text_description">Description</string>
    <string name="edit_hint_description">Input description</string>
    <string name="edit_hint_web">Input url</string>
    <string name="edit_text_gallery">Gallery</string>
    <string name="button_gallery">Gallery</string>
    <string name="button_camera">Camera</string>
    <string name="button_web">Web</string>
    <string name="button_save">Save</string>
    <string name="button_delete">Delete</string>

    <string name="expire_date">Expire date: </string>
    <string name="quantity">Quantity: </string>
    <string name="action_add">Add medicine</string>
    <string name="permission_denied">Permission denied</string>
    <string name="saved_message">Image saved</string>
    <string name="error">Error finding image</string>

    <string name="alert_confirm_title">Confirm</string>
    <string name="alert_confirm_message">Are you sure?</string>
    <string name="alert_confirm_positive">YES</string>
    <string name="alert_confirm_negative">NO</string>
    <string name="alert_dialog_title">Caution!!!</string>
    <string name="alert_error_title">Error</string>
    <string name="alert_error_message_title">Title is required!</string>
    <string name="alert_ok_button">OK</string>

    <string name="btn_close_text">Close</string>
    <string name="image_content_description">Image </string>
    <string name="medicine_saved_message">Medicine saved!</string>

    <string name="content_description_button_edit_url">Submit edit url</string>
    <string name="content_description_cover_image">Cover image</string>
    <string name="content_description_image_widget_item">Image of item list in widget</string>
    <string name="content_description_image_alert">Medicine image in alert layout</string>
    <string name="content_description_photo_item_description">Image of photo gallery description medicine</string>
    <string name="content_description_button_share">Image share button</string>
    <string name="content_description_button_trash">Image trash button</string>
    <string name="content_description_image_grid_item_layout">Image of item grid layout</string>
    <string name="content_description_widget_app">Icon of medicine widget</string>
    <string name="content_description_image_edit">Image of edit item gallery</string>
    <string name="content_description_image_page">Image of gallery</string>
    <string name="add_symbol">+</string>
    <string name="subtract_symbol">-</string>
    <string name="close_symbol">X</string>

    <string name="error_signin_failed">Google sign in failed</string>
    <string name="signin_success">Google sign in success</string>
    <string name="error_query_drive">Error to retrieve files from Google Drive</string>
    <string name="error_copy_db">Failed to copy the database</string>
    <string name="error_permission">Permission denied</string>
    <string name="error_sd_not_exist">SD Card not exist</string>
    <string name="error_file_exist">File already exist</string>
    <string name="error_file_copy">The file could not be copied</string>
    <string name="backup_succesfully">Backup successfully created</string>
    <string name="download_succesfully">Import data successfully</string>
</resources>
