<?xml version="1.0" encoding="utf-8"?>
<com.umberto.medicinetracking.control.SelectableCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/list_item_margin"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:selectableItemBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/list_item_margin_top"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvListMedicineName"
            style="?android:attr/textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:textColor="@color/textPrimaryColor"
            android:textStyle="bold" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/list_item_margin_text_bottom"
            android:layout_marginTop="@dimen/list_item_margin_text_top">

            <TextView
                android:id="@+id/tvListMedicineExpire"
                style="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/expire_date"
                android:textAlignment="center"
                android:textColor="@color/textSecondaryColor"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvListDateMedicineExpire"
                style="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@+id/tvListMedicineExpire" />

            <Button
                android:id="@+id/listButtonAdd"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/roundedbutton"
                android:text="@string/add_symbol"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tvListQuantity"
                style="?android:attr/textAppearanceMedium"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintEnd_toStartOf="@+id/listButtonAdd" />

            <Button
                android:id="@+id/listButtonSubtract"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/roundedbutton"
                android:text="@string/subtract_symbol"
                app:layout_constraintEnd_toStartOf="@+id/tvListQuantity" />
        </android.support.constraint.ConstraintLayout>
    </LinearLayout>
</com.umberto.medicinetracking.control.SelectableCardView>